<resources>
    <string name="mainmenu_button_maexchen">Mäxchen</string>
    <string name="mainmenu_button_kingscup">Kings Cup</string>
    <string name="mainmenu_button_polnisches">Polnisches Trinkspiel</string>
    <string name="mainmenu_button_pyramid">Pyramid</string>
    <string name="mainmenu_headline">Drinking Games Collection</string>
    <string name="title_activity_maexchen_menu">MaexchenMenu</string>
    <string name="title_activity_kingscup_menu">KingscupMenu</string>
    <string name="title_activity_polnisches_trinkspiel">PolnischGameMenu</string>
    <string name="title_activity_polnisches_trinkspiel_rules">PolnischesGameRules</string>
    <string name="title_activity_polnisch_game">PolnischGame</string>
    <string name="title_activity_pyramid">Pyramid</string>
    <string name="app_name">Drinking Games Collection</string>
    <string name="close_message">Press once again to exit!</string>
    <string name="settings">Settings</string>
    <string name="rateApp">Rate App</string>
    <string name="back">Back</string>
    <string name="title_activity_manual">ManualActivity</string>
    <string name="action_settings">Settings</string>
    <string name="general">General</string>
    <string name="pyramid">Pyramid</string>
    <string name="maexchen">Maexchen</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="language">Language</string>
    <string name="show_player_names">Show Playernames</string>
    <string name="player_count">Player Number</string>
    <string name="player_names">Player Names</string>
    <string name="player">Player </string>
    <string name="round">Round: </string>
    <string name="pyramid_dialog_title">Round Overview</string>
    <string name="start">Start</string>
    <string name="manual">Manual</string>
    <string name="first_round_finished">First Round Finished</string>
    <string name="go_to_next_level">Go to the next Level</string>
    <string name="new_game">New Game</string>
    <string name="ok">OK</string>
    <string name="distribute_drinks">Distribute Drinks</string>
    <string name="close">Close</string>
    <string name="distribute">Distribute</string>
    <string name="drinks">Drink(s)</string>
    <string name="second_round_finished">Second Round Finished</string>
    <string name="go_to_Final_level">Go to Final Level</string>
    <string name="final_player_message">Final Player(s): </string>
    <string name="playerhand">Playerhand: </string>
    <string name="final_round">Final Round</string>
    <string name="final_player_name">Final Player: </string>
    <string name="i_have_never_ever">I Have Never Ever</string>
    <string-array name="manualTabs">
        <item>General</item>
        <item>I Have Never Ever</item>
        <item>Pyramid</item>
    </string-array>
    <string-array name="availabeLanguages">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>
    <string-array name="pyramid_rounds">
        <item>Round 1: Black or Red</item>
        <item>Round 2: Higher or Lower</item>
        <item>Round 3: Within or Outside</item>
        <item>Round 4: Possess color or not</item>
    </string-array>
    <string name="maexchen_button_next">Weitergeben</string>
    <string name="maexchen_button_reveal">Aufdecken</string>
    <string name="maexchen_button_throw_again">Erneut\nWürfeln</string>
    <string name="maexchen_button_throw">Glauben</string>
    <string name="maexchen_headline">Mäxchen</string>
    <string name="maexchen_rule_headline">Regeln</string>
    <string name="maexchen_rules"> Würfelwerte: \n\nDer höchste Wert ist das "Mäxchen", das ist eine Zwei und eine Eins (21).\n
        \nAnschließend folgen in absteigender Reihenfolge alle Doppelwerte, also 66, 55, 44, 33, 22 und 11.
        \nDiese werden "Pasch" genannt, also etwa "Einser-Pasch".\n
        \nDanach folgen die übrigen Werte, wobei der höhere Wert immer voran gestellt wird.
        \nIn absteigender Reihenfolge also: 65, 64, 63, 62, 61, 54, 53, 52, 51, 43, 42, 41, 32, 31.\n
        \nDie Gesamtliste lautet also (jetzt in aufsteigender Reihenfolge):
        \n31, 32, 41, 42, 43, 51, 52, 53, 54, 61, 62, 63, 64, 65, 11, 22, 33, 44, 55, 66, 21\n\n
        \nRegeln:\n
        \nDie Spieler sitzen im Kreis. Einer der Spieler beginnt, würfelt mit dem Mobilgerät, indem man es schüttelt oder auf den Becher klickt.
        \nEr kann sich die beiden oben liegenden Würfelwerte anschauen (klick auf Aufdecken).
        \nNun kann sich der Spieler entscheiden nennt er den jeweiligen Wert - oder einen beliebigen anderen und gibt das Mobilgerät weiter (klick auf Weitergeben).
        \nOder man möchte nochmal würfeln (klick auf erneut würfeln), aber nun kann man seinen Wurf nicht mehr sehen und muss blind einen Wert nennen und das Mobilgerät weitergeben (klick auf weitergeben).
        \nDer nächste Spieler hat nun die Möglichkeit, dem ersten Spieler dessen Wurf zu glauben oder auch nicht.
        \nGlaubt er ihn nicht, wird der Würfelbecher entfernt(klick auf Aufdecken)- der Spieler, der im Unrecht war, muss einen trinken.
        \nAlternativ kann der zweite Spieler den ersten Wurf auch glauben(klick auf glauben) und selber weiter würfeln(Spiel ist wieder am Anfang).
        \nEr muss dabei aber mehr als sein Vormann würfeln. Schafft er das nicht, muss er lügen. Anschließend ist der dritte Spieler am Zug, der dem zweiten Spieler dessen Wurf wieder glauben kann oder nicht.
        \nWird ein Wurf angezweifelt und der Becher geöffnet, beginnt der im Unrecht gelegene Spieler mit einer neuen Runde, kann also wieder frei einen Wert vorgeben.
        \nHat ein Spieler ein Mäxchen angesagt, so kann der nachfolgende Spieler nicht mehr weiter überbieten.
        \nIn diesem Fall kann man dem Spieler glauben, trinkt einen und beginnt eine neue Runde.
        \nWenn man ihm nicht glaubt deckt man auf. Der Spieler der im Unrecht war trinkt nun 2 und beginnt eine neue Runde.</string>
    <string name="title_activity_maexchen_rules">MaexchenRules</string>
    <string name="maexchen_textView_result_init">  </string>
    <string name="pyramid_drink_message">Drink!!!!!!!!!!!!!!!!</string>
    <string name="pyramid_manual_general_info">Bevor angefangen wird, muss sich jeder Spieler eine Flasche Bier, ein paar Shots oder ein beliebiges anderes alkoholisches Getränk bereitstellen.Während der gesamten Spielzeit ist sicherzustellen, dass alle Spieler ausreichend alkoholisch versorgt sind.</string>
    <string name="pyramid_manual_first_round">The First Level goas about 4 Rounds</string>
    <string name="pyramid_manual_second_round">Zu Spielbeginn wird die erste Karte der untersten Pyramidenreihe aufgedeckt. Derjenige, dessen Wert mit der aufgedeckten Karte getroffen wird, kann eine gewisse Anzahl an Schlücken an seine Mitspieler verteilen. Natürlich muss er keine Schlücke verteilen, denn es könnte ja sein, dass der selbe Wert später noch einmal auftaucht und er dann eine größere Anzahl an Schlücken verteilen kann. Nun werden die Karten der untersten Reihe nacheinander aufgedeckt und das Procedere wiederholt sich gleichermaßen. </string>
    <string name="pyramid_manual_final_round">Im Finale müssen alle Spieler, die es ins Finale geschafft haben nacheinander bei fünf augedeckten Karten sagen ob die der Wert der nächste Karten im Spieldeck höher oder tiefer ist. Wenn der Spieler bei allen fünf Karten nacheinander richtig getippt hat, hat er das Spiel gewonnen. Sollte er jedoch falsch getippt haben, muss er einen oder mehrere Schlücken drinken und wieder bei der ersten Karte tippen ob Höher oder Tiefer. Das geht solange bis alle Spieler, die im Finale sind, 5 mal hintereinander richtig getippt haben.</string>
    <string name="pyramid_manual_first_first_round">You have to guess if the color of the next card im gamedeck is Black or Red</string>
    <string name="pyramid_manual_first_second_round">You have to guess if the Value of the next card im gamedeck is higher or lower than the Card from the 1 Round</string>
    <string name="pyramid_manual_first_third_round">You have to guess if the Value of the next card im gamedeck is within or without the Cards from the 1 and 2 Round</string>
    <string name="pyramid_manual_first_fourth_round">You have to guess if the color of the next card im gamedeck is already in  your Possession or not.</string>
    <string name="pyramid_manual_general_info_header">Gameplay</string>
    <string name="pyramid_manual_first_round_header">First Level</string>
    <string name="pyramid_manual_first_first_round_header">1 Round</string>
    <string name="pyramid_manual_first_second_round_header">Second Level</string>
    <string name="pyramid_manual_first_third_round_header">3 Round</string>
    <string name="pyramid_manual_first_fourth_round_header">4 Round</string>
    <string name="pyramid_manual_second_round_header">Second Level</string>
    <string name="pyramid_manual_final_round_header">Final Level</string>
    <string name="help">Help</string>
    <string name="clos_game_message">Do you want do close the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_second_pyramid_round">Welcome to the second Round</string>
    <string name="maexchen_button_help">Help</string>
    <string name="maexchen_button_new_turn">New Round</string>
    <string name="prefs_categories">Categories</string>
    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="love">Love</string>
    <string name="drinking">Drinking</string>
    <string name="adult">Adult</string>
    <string name="law">Law</string>
    <string name="next">Next</string>
    <string name="quit">quit</string>
    <string name="never_ever_header">I have never ever</string>
    <string name="polnisch_rule_headline">Regeln</string>
    <string name="polnisch_game_field_headline">Das Spielfeld</string>
    <string name="polnisch_game_field">Das Spielfeld an sich erinnert an ein ganz normales Gesellschaftsspiel.
        \nEs besteht aus 72 unterschiedlichen Spielfeldern.
        \nZiel des Spieles ist es, den eigenen Spielstein (Icon) vom Start ins Ziel zu bewegen.
        \nAuf den einzelnen Spielfeldern stehen verschiedene
        Aufgaben die der aktuelle Spieler erledigen muss, wenn er auf diesem Feld landet.</string>
    <string name="polnisch_game_rule_headline">Spielablauf und Regeln</string>
    <string name="polnisch_game_rules">Die Regeln dieses Trinkspieles sind ganz einfach.
        \nIst ein Spieler an der Reihe, würfelt er(klick auf das Würfel Icon).
        \nDie Spielfigur setzt sich nun in Bewegung bis sie das erwürfelte Feld erreicht.
        \nAuf dem Spielfeld auf dem sie landet, steht eine Aufgabe die erfüllt werden muss.
        \nBei Aufgaben die einem auf andere Felder schicken wird dies vom Spiel selbst erledigt.
        \nNatürlich muss dann auch die Aufgabe des Feldes erledigt werden auf das man geschickt wurde.
        \nMeistens geht es ums trinken. Die Aufgabe auf diesem Spielfeld können dabei nur den aktuellen Spieler,
        alle Spieler oder eine bestimme Personengruppe betreffen.
        \n\nBenötigt werden für das Spiel alkoholische Getränke und Gläser (maximal 0.4cl).
        \nDas Wichtigste ist, dass keine Aufgabe ausgelassen oder übersprungen werden kann.</string>
    <string name="prefs_import_export">Import/Export</string>
    <string name="export">Export</string>
    <string name="res_import">Import</string>
    <string name="add_statements">Add new Statements</string>
    <string name="delete_statements">Delete Statements</string>
    <string name="new_statement">New Statement</string>
    <string name="statement">Statement</string>
    <string name="category">Category</string>
    <string name="delete_statement">Delete Statement</string>
</resources>