<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Maexchen"
    tools:showIn="@layout/activity_maexchen_menu"
    android:visibility="visible">

    <Button
        android:layout_width="@dimen/maexchen_button_width"
        android:layout_height="@dimen/maexchen_button_height"
        android:text="@string/maexchen_button_reveal"
        android:id="@+id/maexchen_button_left"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="101dp" />

    <Button
        android:layout_width="@dimen/maexchen_button_width"
        android:layout_height="@dimen/maexchen_button_height"
        android:text="@string/maexchen_button_next"
        android:id="@+id/maexchen_button_right"
        android:layout_alignTop="@+id/maexchen_button_left"
        android:layout_toEndOf="@+id/maexchen_button_left"
        android:layout_marginLeft = "@dimen/maexchen_button_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maexchen_textView_result_init"
        android:id="@+id/maexchen_textview_dice"
        android:textSize="20dip"
        android:layout_above="@+id/maexchen_button_left"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:textColor="#090909" />

    <ImageView
        android:layout_width="@dimen/image_view_dice_size"
        android:layout_height="@dimen/image_view_dice_size"
        android:id="@+id/imageView_dice_left"
        android:layout_marginBottom="57dp"
        android:layout_above="@+id/maexchen_textview_dice"
        android:layout_alignEnd="@+id/maexchen_button_left" />
    <ImageView
        android:layout_width="@dimen/image_view_dice_size"
        android:layout_height="@dimen/image_view_dice_size"
        android:id="@+id/imageView_dice_right"
        android:layout_alignTop="@+id/imageView_dice_left"
        android:layout_alignStart="@+id/maexchen_button_right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dip"
        android:text="@string/maexchen_headline"
        android:id="@+id/maexchen_textview_headline"
        android:textColor="#090909"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/maexchen_textview_dice" />

    <Button
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:id="@+id/maexchen_button_help"
        android:layout_alignBottom="@+id/maexchen_textview_headline"
        android:layout_alignEnd="@+id/maexchen_button_right"
        android:background="@mipmap/dice_1"
        android:text="@string/maexchen_button_help"
        android:textColor="#080808"
        android:textSize="0dip" />

</RelativeLayout>
