<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wtfisandroid.drinkinggamescollection.MainMenu"
    tools:showIn="@layout/activity_main_menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_headline"
        android:id="@+id/headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="14pt"
        android:textColor="#090909" />

    <Button
        android:layout_width="@dimen/mainmenu_button_width"
        android:layout_height="@dimen/mainmenu_button_height"
        android:text="@string/mainmenu_button_maexchen"
        android:id="@+id/button_maexchen"
        android:layout_below="@+id/headline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="#da4c4c" />

    <Button
        android:layout_width="@dimen/mainmenu_button_width"
        android:layout_height="@dimen/mainmenu_button_height"
        android:text="@string/mainmenu_button_kingscup"
        android:id="@+id/button_kingscup"
        android:layout_marginTop="42dp"
        android:background="#da4c4c"
        android:layout_below="@+id/button_maexchen"
        android:layout_alignStart="@+id/button_maexchen" />

</RelativeLayout>
